--- a/index.html
+++ b/index.html
@@ -95,6 +95,50 @@
             </div> 
         </div>
     </div>
-
-    
- 
+    <section class="containerdown">
+        <section class="container_info">
+          <section class="column">
+            <p class="title">Abstract</p>
+            <article class="subtitles">Start Trial</article>
+            <article class="subtitles">Pricing</article>
+            <article class="subtitles">Download</article>
+          </section>
+  
+          <section class="column">
+            <p class="title">Resources</p>
+            <article class="subtitles">Blog</article>
+            <article class="subtitles">Help Center</article>
+            <article class="subtitles">Release Notes</article>
+            <article class="subtitles">Status</article>
+          </section>
+  
+          <section class="column">
+            <p class="title">Community</p>
+            <article class="subtitles">Twitter</article>
+            <article class="subtitles">LinkedIn</article>
+            <article class="subtitles">Facebook</article>
+            <article class="subtitles">Dribbble</article>
+            <article class="subtitles">Podcast</article>
+          </section>
+  
+          <section class="column">
+            <p class="title">Company</p>
+            <article class="subtitles">About Us</article>
+            <article class="subtitles">Careers</article>
+            <article class="subtitles">Legal</article>
+            <p class="title_subtitle">Contact Us</p>
+            <p class="mail_subtitle">info@abstract.com</p>
+          </section>
+  
+          <section class="column"></section>
+          <section class="column"></section>
+        </section>
+  
+        <footer>
+          <p class="footer_info">© Copyright 2023</p>
+          <p class="footer_info">Abstract Studio Design, Inc.</p>
+          <p class="footer_info">All rights reserved</p>
+        </footer>
+      </section>
+</body>
+  
